SFDC_LD_Packages/CPQ/main/default/objects/QuoteLineItem/fields/CPQ_Playbook_Rule_Action__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Rule_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Action that added this QLI in CPQ</description>
    <label>CPQ Playbook Rule Action</label>
    <referenceTo>CPQ_Playbook_Rule_Action__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>