SFDC_LD_Packages/CPQ/main/default/objects/QuoteLineItem/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Percent change from List Price to Unit Price</description>
    <label>Discount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>