SFDC_LD_Packages/CPQ/main/default/objects/QuoteLineItem/fields/Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Price__c</fullName>
    <description>Actual price per unit of quantity</description>
    <label>Quoted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>